cros: Set height explicitly in login bubbles

Bug: 911615
Change-Id: I0649f45091089c0b6dc4847ee196380efd1f4ebc
Reviewed-on: https://chromium-review.googlesource.com/c/1363970
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614121}
Former-commit-id: 0383eee85efd6c7fd5ddf801b196144beab529f3